--- a/arch/arm64/configs/my_kirin970_defconfig
+++ b/arch/arm64/configs/my_kirin970_defconfig
@@ -135,7 +135,7 @@ CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 CONFIG_HW_CGROUP_PIDS=y
-CONFIG_CGROUP_PIDS=y
+# CONFIG_CGROUP_PIDS is not set
 # CONFIG_HW_CGROUP_IONICE is not set
 CONFIG_CGROUP_IOLIMIT=y
 CONFIG_CGROUP_DEVICE=y
@@ -164,7 +164,7 @@ CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
-CONFIG_PID_NS=y
+# CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 CONFIG_HISI_EAS_SCHED=y
 # CONFIG_HISI_MULTI_MARGIN is not set
